objects/ccpe_ppm__Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_ppm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__End__c</fullName>
        <label>Latest Program End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Start__c</fullName>
        <label>Earliest Program Start</label>
        <type>Date</type>
    </fields>
</CustomObject>